--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,12 +8,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v20
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install nix
+        uses: cachix/install-nix-action@v20
         with:
           install_url: https://nixos.org/nix/install
           extra_nix_config: |
             auto-optimise-store = true
             access-tokens = github.com=${{ secrets.TOKEN_GITHUB }}
             experimental-features = nix-command flakes
-      - run: nix flake check
+
+      - name: Run check
+        run: nix flake check
