--- a/.github/workflows/updateFlakeLock.yml
+++ b/.github/workflows/updateFlakeLock.yml
@@ -1,4 +1,5 @@
 name: update-flake-lock
+permissions: write-all
 on:
   workflow_dispatch: # allows manual triggering
   schedule:
@@ -12,10 +13,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
-      - name: Setup Account to commit
-        run: |-
-          git config user.name "Automated"
-          git config user.email "actions@users.noreply.github.com"
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@main
         with:
