--- a/.github/workflows/updateFlakeLock.yml
+++ b/.github/workflows/updateFlakeLock.yml
@@ -1,5 +1,7 @@
 name: update-flake-lock
-permissions: write-all
+permissions:
+    contents: write
+    pull-requests: write
 on:
   workflow_dispatch: # allows manual triggering
   schedule:
