--- a/.github/workflows/updateFlakeLock.yml
+++ b/.github/workflows/updateFlakeLock.yml
@@ -5,7 +5,7 @@ permissions:
 on:
   workflow_dispatch: # allows manual triggering
   schedule:
-    - cron: '0 0 * * *' # runs weekly on Sunday at 00:00
+    - cron: '0 0 * * *' # runs everyday at 00:00
 
 jobs:
   lockfile:
