--- a/.github/workflows/createIso.yml
+++ b/.github/workflows/createIso.yml
@@ -29,6 +29,9 @@ jobs:
             extra-substituters = https://hyprland.cachix.org
             extra-trusted-public-keys = hyprland.cachix.org-1:a7pgxzMz7+chwVL3/pzj6jIBMioiJM7ypFP8PwtkuGc=
 
+      - name: Setup channel
+        run: nix-channel --add https://nixos.org/channels/nixpkgs-unstable & nix-channel --update
+
       - name: Build ISO Images
         shell: bash
         run: nix-shell -p nixos-generators --run "nixos-generate --format iso --configuration ./hosts/iso/configuration.nix -o result"
