--- a/.github/workflows/createIso.yml
+++ b/.github/workflows/createIso.yml
@@ -30,6 +30,7 @@ jobs:
             extra-trusted-public-keys = hyprland.cachix.org-1:a7pgxzMz7+chwVL3/pzj6jIBMioiJM7ypFP8PwtkuGc=
 
       - name: Setup channel
+        shell: bash
         run: nix-channel --add https://nixos.org/channels/nixpkgs-unstable & nix-channel --update
 
       - name: Build ISO Images
