--- a/.github/workflows/createIso.yml
+++ b/.github/workflows/createIso.yml
@@ -5,9 +5,6 @@ on:
 
 concurrency: build
 
-env:
-  NIX_PATH: nixpkgs=https://nixos.org/channels/nixpkgs-unstable
-
 jobs:
   build-images:
     name: "Build ISO Images"
@@ -38,7 +35,7 @@ jobs:
 
       - name: Build ISO Images
         shell: bash
-        run: nix-shell -p nixos-generators --run "nixos-generate --format iso --configuration ./hosts/iso/configuration.nix -o result"
+        run: NIX_PATH=nixpkgs=https://nixos.org/channels/nixpkgs-unstable nix-shell -p nixos-generators --run "nixos-generate --format iso --configuration ./hosts/iso/configuration.nix -o result"
 
       - uses: actions/upload-artifact@v4
         with:
