--- a/.github/workflows/createIso.yml
+++ b/.github/workflows/createIso.yml
@@ -18,8 +18,8 @@ jobs:
     steps:
       - name: Make space
         run: |
-              sudo rm -rf /usr/share/dotnet
-              sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+              rm -rf /usr/share/dotnet
+              rm -rf "$AGENT_TOOLSDIRECTORY"
     
       - name: Checkout
         uses: actions/checkout@v4
