--- a/.github/workflows/createIso.yml
+++ b/.github/workflows/createIso.yml
@@ -65,7 +65,7 @@ jobs:
           merge-multiple: true
 
       - name: Display structure of downloaded files
-        run: ls -R
+        run: ls -la
 
       - name: Calculate Checksums
         run: |
@@ -86,10 +86,6 @@ jobs:
         # output format: 2023-12-30-234559
         run: echo "date=$(date +'%Y-%m-%d-%H%M%S')" >> "${GITHUB_OUTPUT}"
 
-      - name: Zip Iso
-        shell: bash
-        run: zip iso-${{ steps.get-date.outputs.date }}.zip *.iso
-
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v2
@@ -97,7 +93,7 @@ jobs:
           name: "iso-${{ steps.get-date.outputs.date }}"
           tag_name: "iso-${{ steps.get-date.outputs.date }}"
           files: |
-            iso-${{ steps.get-date.outputs.date }}.zip
+            *.iso
             checksums.txt
           body: |
             # Weekly Iso Releases
